@@ -1,5 +1,7 @@
   version 2.8.7
 - updated inventory scanning to per-bag updates to greatly improve performance
+- fixed font spacing
+- added font shadow
 
   version 2.8.6
 - improved performance
